--- a/scss/style.scss
+++ b/scss/style.scss
@@ -177,7 +177,7 @@ main {
           background: $primary-color;
           padding: 8px 20px;
           color: $contrast-color;
-          &::after{
+          &::after {
             content: unset;
           }
         }
@@ -616,7 +616,7 @@ main {
 .home-product {
   width: 100%;
   position: relative;
-  .title{
+  .title {
     text-align: center;
   }
   .swiper-button-disabled {
@@ -786,24 +786,24 @@ main {
     a {
       padding: 15px;
       text-align: center;
-      @include flex($flex-direction:column);
+      @include flex($flex-direction: column);
       @include transition;
-      &:hover{
+      &:hover {
         box-shadow: 0px 10px 50px -20px rgba(0, 0, 0, 1);
-        .devices__name{
+        .devices__name {
           color: $primary-color;
         }
       }
     }
   }
-  &__img{
+  &__img {
     width: 100%;
     max-width: 156px;
     max-height: 156px;
     object-fit: contain;
     margin-bottom: 10px;
   }
-  &__name{
+  &__name {
     display: block;
     font-size: 14px;
     line-height: 16px;
@@ -811,17 +811,17 @@ main {
     color: $secondery-color;
     @include transition;
   }
-  @media screen and(max-width:1200px){
+  @media screen and(max-width:1200px) {
     &__item {
       width: 33.33333333%;
     }
   }
-  @media screen and(max-width:600px){
+  @media screen and(max-width:600px) {
     &__item {
       width: 50%;
     }
   }
-  @media screen and(max-width:420px){
+  @media screen and(max-width:420px) {
     &__item {
       width: 100%;
     }
@@ -830,82 +830,403 @@ main {
 
 // CONTACT
 
-.contact{
+.contact {
   display: flex;
   flex-direction: column;
   align-items: baseline;
   width: 100%;
   padding: 40px;
   background: $contrast-color;
-  &__title{
+  &__title {
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 15px;
     color: $secondery-color;
   }
-  &__text{
+  &__text {
     font-size: 14px;
     margin-bottom: 15px;
     color: $secondery-color;
     font-weight: 400;
   }
-  span{
-    a{
+  span {
+    a {
       color: #2980b9;
     }
   }
-  
-
 }
+
+// CONTACT-FORM
 
 .contact-form {
   margin-top: 15px;
   background-color: $contrast-color;
-&__container{
-  max-width: 1370px;
-  margin: 0 auto;
+  &__container {
+    max-width: 1370px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 40px;
+  }
+  &__header {
+    font-size: 20px;
+    font-weight: 100;
+  }
+  &__text {
+    margin-top: 12px;
+    font-size: 14px;
+    font-weight: 100;
+  }
+  &__input {
+    border: 1px solid #777e90;
+    border-radius: 2px;
+    font-size: 12px;
+    color: #292b31;
+    padding: 10px 5px;
+    width: 350px;
+    margin-bottom: 15px;
+    background-color: $contrast-color;
+    cursor: pointer;
+    resize: none;
+    &:last-child {
+      background-color: $primary-color;
+      border: 1px solid $contrast-color;
+      color: $contrast-color;
+      @include transition;
+      &:hover {
+        background-color: $contrast-color;
+        border: 1px solid $primary-color;
+        color: $primary-color;
+      }
+    }
+  }
+}
+
+// CATALOG
+
+.catalog {
   width: 100%;
-  padding: 40px;
-}
-&__header{
-  font-size: 20px;
-  font-weight: 100;
-}
-&__text{
-  margin-top:12px;
-  font-size: 14px;
-  font-weight: 100;
-}
-&__input{
-  border: 1px solid #777e90;
-  border-radius: 2px;
-  font-size: 12px;
-  color: #292b31;
-  padding: 10px 5px;
-  width: 350px;
-  margin-bottom: 15px;
-  background-color: $contrast-color;
-  cursor: pointer;
-  resize: none;
-}
-&__input:last-child{
-  background-color: $primary-color;
-  border: 1px solid $contrast-color;
-  color: $contrast-color;
-  @include transition;
-}
-&__input:last-child:hover{
-  background-color: $contrast-color;
-  border: 1px solid $primary-color;
-  color: $primary-color;
-}
-}
+  display: flex;
+  gap: 10px;
+  &__left {
+    background: $contrast-color;
+    width: 25%;
+    padding: 0 10px;
+  }
+  &__right {
+    width: 75%;
+  }
+  &__top {
+    @include flex(space-between);
+    width: 100%;
+    padding: 20px 0;
+    h2 {
+      margin-bottom: 0;
+    }
+  }
+  &__border-bottom {
+    border-bottom: 1px solid $border-color;
+  }
+  &__title {
+    font-size: 20px;
+    color: $secondery-color;
+    margin-bottom: 10px;
+  }
+  &__cancled {
+    padding: 1px 6px;
+    background: #fff;
+    font-size: 14px;
+    color: $secondery-color;
+    font-weight: 400;
+    border-radius: 12px;
+    border: 1px solid $primary-color;
+  }
+  .price-change-filter {
+    display: flex;
+    gap: 20px;
+    width: 85%;
+    margin-bottom: 20px;
+    input {
+      width: 48%;
+      float: left;
+      text-align: center;
+    }
+  }
+  .input-sm {
+    height: 30px;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+  }
+  .form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+    -webkit-transition: border-color ease-in-out 0.15s,
+      -webkit-box-shadow ease-in-out 0.15s;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow;
+  }
+  &__budget {
+    @include flex($flex-direction: column);
+    padding: 10px 8px 10px 15px;
+    h4 {
+      margin-bottom: 5px;
+    }
+  }
+  &__spoiler{
+    padding: 10px 8px;
+  }
+  &__option{
+    @include flex(space-between);
+    margin-bottom: 10px;
+  }
+  &__sub-title {
+    color: $secondery-color;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  &__svg{
+    transform: rotate(90deg);
+    @include transition;
+    &_active{
+      transform: rotate(-90deg);
+    }
+  }
+  &__cont{
+    max-height: 1000px;
+    overflow: hidden;
+    @include transition;
+    &_active{
+      max-height: 20px;
+    }
+  }
+  &__desc {
 
+    a {
+      color: #292b31 !important;
+      border: none !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+      background: none !important;
+    }
+    label {
+      position: relative;
+      cursor: pointer;
+      display: block;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: 1.5;
+      white-space: normal;
+      padding: 4px 0 4px 30px;
+      width: 100%;
+      text-decoration: none;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      &::before {
+        content: "";
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        background: #fff;
+        left: 0;
+        top: 3px;
+        border-radius: 3px;
+        border: 1px solid #9ca0ab;
+      }
+    }
+  }
 
+  // CATALOG-RIGHT
 
-
-
-
+  &__text {
+    padding: 20px;
+    font-size: 14px;
+    color: $secondery-color;
+    background: #fff;
+    margin-bottom: 8px;
+  }
+  &__sort {
+    background: $contrast-color;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 16px;
+    margin-bottom: 8px;
+    span {
+      color: $secondery-color;
+      margin-right: 15px;
+      font-size: 14px;
+      font-weight: 500;
+    }
+    button {
+      font-size: 14px;
+      text-align: center;
+      color: $secondery-color;
+      padding: 8px;
+      background: none;
+      border: 1px solid $border-color;
+    }
+    &_active {
+      border-color: $primary-color !important;
+      color: $contrast-color !important;
+      background: $primary-color !important;
+    }
+  }
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 10px;
+  }
+  &__item {
+    background-color: $contrast-color;
+    max-width: 340px;
+    width: 100%;
+    padding: 30px;
+    cursor: pointer;
+    @include transition;
+    &:hover {
+      box-shadow: 0 10px 25px rgb(0 0 0 / 11%);
+      .catalog__img {
+        transform: scale(1.1);
+      }
+    }
+  }
+  &__img {
+    max-width: 268px;
+    width: 100%;
+    max-height: 268px;
+    margin-bottom: 43px;
+    @include transition;
+  }
+  &__name {
+    margin-bottom: 10px;
+    a {
+      font-size: 16px;
+      font-weight: 600;
+      color: $secondery-color;
+    }
+  }
+  &__table {
+    width: 100%;
+    margin-bottom: 20px;
+    table {
+      width: 100%;
+    }
+    td {
+      margin-bottom: 2px;
+      &:first-child,
+      &:last-child {
+        font-size: 14px;
+        color: $secondary-color-light;
+        white-space: nowrap;
+        width: 50%;
+        display: block;
+        float: left;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+      &:last-child {
+        color: $secondery-color;
+      }
+    }
+  }
+  &__price-block {
+    display: flex;
+  }
+  &__price {
+    display: flex;
+    flex-flow: wrap;
+    font-size: 18px;
+    font-weight: 500;
+    width: 60%;
+    text-align: left;
+    margin-bottom: 20px;
+    &-old {
+      color: $secondery-color;
+      font-weight: 500;
+      font-size: 14px;
+      display: block;
+      text-decoration: line-through;
+      float: left;
+      width: 100%;
+      margin-bottom: 6px;
+    }
+    &-new {
+      font-weight: 600;
+      font-size: 24px;
+      color: $primary-color;
+      float: left;
+    }
+  }
+  &__save {
+    color: $secondery-color;
+    flex-flow: wrap;
+    font-size: 14px;
+    text-align: right;
+    font-weight: 500;
+    width: 40%;
+    padding-top: 3px;
+  }
+  &__percent {
+    width: 100%;
+  }
+  &__buttons {
+    display: flex;
+    gap: 20px;
+  }
+  &__button {
+    border: 1px solid $secondery-color;
+    color: $secondery-color;
+    background: $contrast-color;
+    @include transition;
+    &:hover {
+      background: $primary-color;
+      color: $contrast-color;
+      border-color: $primary-color;
+    }
+  }
+  .button {
+    max-width: 48%;
+    height: 48px;
+    width: 100%;
+    padding: 0;
+    @include flex;
+  }
+  @media screen and(max-width:1024px) {
+    &__content {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  @media screen and(max-width:768px) {
+    &__left {
+      display: none;
+    }
+    &__right {
+      width: 100%;
+    }
+  }
+  @media screen and(max-width:550px) {
+    &__sort {
+      flex-wrap: wrap;
+    }
+    &__content {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+}
 
 // FOOTER
 
