--- a/scss/style.scss
+++ b/scss/style.scss
@@ -884,6 +884,7 @@ main {
     padding: 10px 5px;
     width: 350px;
     margin-bottom: 15px;
+    color: $secondary-color-light;
     background-color: $contrast-color;
     cursor: pointer;
     resize: none;
@@ -1549,7 +1550,12 @@ main {
     }
   }
 }
+
+
+
 //BASKET 
+
+
 .basket__container{
   display: grid;
   grid-template-columns: repeat(2, 660px);
@@ -1558,11 +1564,109 @@ main {
 .info-form__container{
  background-color: $contrast-color;
   .info-form{
-    padding: 20px;
+    padding: 30px;
   } 
 }
 
 .product__container{
   max-height: 300px;
   background-color: $contrast-color;
+  padding: 30px;
+.product__wrapper_main{
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid $border-color;
+  padding-bottom: 40px;
+.product__wrapper{
+  width: 110px;
+  height: 110px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__image{
+     object-fit: contain;
+    width: auto;
+    height: auto;
+  }
+}
+ul{
+  display: flex;
+  max-height: 150px;
+  
+}
+.product__text{
+    font-size: 16px;
+    text-decoration: none;
+    color: $secondery-color;
+  }
+.quantity{
+  div:first-child{
+    padding: 5px 0 5px 35px;
+  }
+}
+.quantity__wrapper{
+  display: flex;
+  margin-top: 15px;
+  padding: 5px 0 5px 35px;
+  .price__wrapper{
+    display: flex;
+    flex-direction:column;
+    margin-left: 15px;
+    .price__text{
+      color: #292b31;
+    }
+    .price__num{
+      color: $primary-color;
+      font-size: 18px;
+      font-weight: 700px;
+      
+    } 
+  }
+  }
+.decrease-button__wrapper{
+  display: block;
+  background-color: $primary-color-light;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  button{
+    background-color: #00000000;
+    color: $contrast-color;
+    width: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+  }
+}
+input{
+  border: 1px solid $border-color;
+  text-align: center;
+  width: 80px;
+  color: $secondary-color-light;
+}
+.increase-button__wrapper{
+  display: block;
+  background-color: $primary-color-light;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  button{
+    background-color: #00000000;
+    color: $contrast-color;
+    width: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+}
+
+}
+
 }
