--- a/scss/style.scss
+++ b/scss/style.scss
@@ -957,7 +957,7 @@ main {
       width: 48%;
       float: left;
       text-align: center;
-    }
+    }    
   }
   .input-sm {
     height: 30px;
@@ -1054,6 +1054,11 @@ main {
         border: 1px solid #9ca0ab;
       }
     }
+  }
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
   }
 
   // CATALOG-RIGHT
@@ -1236,6 +1241,11 @@ main {
   }
 }
 
+.apply_filter{
+  margin-top: 10px;
+  display: flex;
+  margin: 15px auto;
+}
 // PRODUCT
 
 .product {
@@ -1577,7 +1587,7 @@ main {
 }
 
 .product__container{
-  max-height: 300px;
+  min-height: 300px;
   background-color: $contrast-color;
   padding: 30px;
 .product__wrapper_main{
