--- a/scss/style.scss
+++ b/scss/style.scss
@@ -489,12 +489,31 @@ main {
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 10px;
   margin-bottom: 30px;
+  /*&__wrapper{
+    width: 200px;
+  height: 200px;
+  }
+  &__img{
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }*/
+  
   &__item {
+    img{
+      width: 250px;
+      height: 250px;
+      
+    }
+    
     @include flex(space-between);
     background: $contrast-color;
     padding: 35px 20px 30px 40px;
     grid-column: span 1 / span 1;
     @include transition;
+    
     &:first-child {
       padding: 75px 120px;
       grid-column: span 2 / span 2;
@@ -530,6 +549,8 @@ main {
       }
     }
   }
+ 
+  
   &__description {
     width: 57%;
   }
@@ -581,7 +602,7 @@ main {
     }
   }
 }
-
+ 
 // HOME-INFO
 
 .home-info {
@@ -1320,6 +1341,7 @@ main {
     flex-wrap: wrap;
     box-shadow: 0px 8px 40px rgb(0 0 0 / 16%);
     width: 100%;
+    height: 50%;
     padding: 27px 15px 20px;
   }
   &__left {
@@ -1583,8 +1605,86 @@ main {
  background-color: $contrast-color;
   .info-form{
     padding: 30px;
-  } 
+    &__input{
+      margin-top: 7px;
+      margin-bottom: 7px;
+      height: 32px;
+      width: 308px;
+      border: 1px solid $secondary-color-light;
+      color: $secondary-color-light;
+      padding: 6px 14px;
+    }
+    &__text{
+      color: $secondary-color-light;
+      font-size: 10px;
+    }
+    &__importaint{
+      color: red;
+    }
+    
+  }
+  .way-to-get{
+    img{
+      margin-left:  5px;
+      margin-right: 5px;
+    }
+    display: flex;
+    align-items: center;
+    input[type='radio']{
+      position: relative;
+      -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+      display: inline-block;
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+    }
+    input[type='radio']::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 22px;
+      height: 22px;
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      border: 2px solid $primary-color;
+    }
+    input[type='radio']:checked::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background-color: $primary-color;
+      transform: translate(-50%, -50%);
+      visibility: visible;
+    }
+    margin-bottom: 10px;
+
+    &__text{
+      line-height: 22px;
+      color: $secondary-color-light;
+    }
+  }
+  .button{
+    width: 100%;
+    margin-top: 20px;
+    cursor: pointer;
+  }
 }
+
+.total__price{
+  color: $primary-color;
+  font-size: 23px;
+  margin-left: 5px;
+}
+
 
 .product__container{
   min-height: 300px;
@@ -1602,10 +1702,10 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  &__image{
-     object-fit: contain;
-    width: auto;
-    height: auto;
+  img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
   }
 }
 ul{
